force-app/main/default/objects/PDRI__Metadata_Deployment_Result__c/PDRI__Metadata_Deployment_Result__c.object-meta.xml
<CustomObject>
    <label>Metadata Deployment Result</label>
    <nameField>
        <displayFormat>MDR-{00000000}</displayFormat>
        <label>Metadata Deployment Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Deployment Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>