force-app/main/default/objects/PDRI__Metadata_Deployment_Result__c/fields/PDRI__Deployment_Result__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Result__c</fullName>
    <label>Deployment Result</label>
    <referenceTo>PDRI__Deployment_Result__c</referenceTo>
    <relationshipLabel>Metadata Deployment Results</relationshipLabel>
    <relationshipName>Metadata_Deployment_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>