force-app/main/default/objects/PDRI__Metadata_Deployment_Result__c/fields/PDRI__Quick_Deploy__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Quick_Deploy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Quick Deployment</label>
    <type>Checkbox</type>
</CustomField>