force-app/main/default/objects/PDRI__Metadata_Deployment_Result__c/fields/PDRI__Result_Icon__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Result_Icon__c</fullName>
    <formula>IF( OR(ISPICKVAL(PDRI__Result__c, &apos;Success&apos;),ISPICKVAL(PDRI__Result__c, &apos;SucceededPartial&apos;)), IMAGE(&quot;/resource/PDRI__MooverResources/images/Base_Complete_No_Drained.png&quot;,&quot;Success.&quot;,20,20),IF( ISPICKVAL(PDRI__Result__c, &apos;Failure&apos;), IMAGE(&quot;/resource/PDRI__MooverResources/images/Base_With_Expired_Icon_No_Drained.png&quot;,&quot;Deployment failure.&quot;,20,20),&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result Icon</label>
    <type>Text</type>
</CustomField>