force-app/main/default/objects/PDRI__Metadata_Deployment_Result__c/fields/PDRI__SF_Deployment_ID__c.field-meta.xml
<CustomField>
    <fullName>PDRI__SF_Deployment_ID__c</fullName>
    <description>Represents the Deployment ID in Salesforce</description>
    <label>SF Deployment ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>