force-app/main/default/objects/PDRI__Metadata_Deployment_Result__c/fields/PDRI__Test_Level__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Test_Level__c</fullName>
    <label>Test Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NoTestRun</fullName>
                <label>No Tests Run</label>
            </value>
            <value>
                <fullName>RunSpecifiedTests</fullName>
                <label>Run Specified Tests</label>
            </value>
            <value>
                <fullName>RunLocalTests</fullName>
                <label>Run Local Tests</label>
            </value>
            <value>
                <fullName>RunAllTestsInOrg</fullName>
                <label>Run All Tests</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>