force-app/main/default/objects/PDRI__Metadata_Deployment_Result__c/fields/PDRI__Tests_Ran__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Tests_Ran__c</fullName>
    <label>Tests Ran</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>