force-app/main/default/objects/PDRI__Metadata_Deployment_Result__c/fields/PDRI__Validation__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation</label>
    <type>Checkbox</type>
</CustomField>