force-app/main/default/objects/PDRI__Metadata_Deployment_Result__c/fields/PDRI__Validation_Icon__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Validation_Icon__c</fullName>
    <formula>IF( PDRI__Validation__c, IMAGE(&quot;/resource/PDRI__MooverResources/images/Base_Complete_No_Drained.png&quot;,&quot;Validation.&quot;,20,20),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validation Icon</label>
    <type>Text</type>
</CustomField>