force-app/main/default/objects/PDRI__Metadata_Deployment_Result__c/fields/PDRI__Validation_ID__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Validation_ID__c</fullName>
    <label>Deployment Validation ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>